--- a/Project/UserSettings/Search.settings
+++ b/Project/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "selectmap"
+	"last_search.DA949528" = "hit"
 	"OpenInspectorPreview.DA949528" = "0"
 	"currentGroup.DA949528" = "all"
 	"last_search.2138236A" = "levelmiss"
@@ -62,6 +62,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"s"
 	"sdf"
 	"}"
 	"
